
    YARN-4654. Yarn node label CLI should parse "=" correctly when trying to 
    remove all labels on a node. (Naganarasimha G R via rohithsharmaks)

    YARN-4386. refreshNodesGracefully() should send recommission event to active
    RMNodes only. (Kuhu Shukla via junping_du)

    YARN-4709. NMWebServices produces incorrect JSON for containers.
    (Varun Saxena via vvasudev)

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    YARN-4287. Capacity Scheduler: Rack Locality improvement (Nathan Roberts via wangda)

    YARN-4492. Add documentation for preemption supported in Capacity
    scheduler (Naganarasimha G R via jlowe)

    YARN-4653. Document YARN security model from the perspective of
    Application Developers. (Steve Loughran via jianhe)

  OPTIMIZATIONS

  BUG FIXES

    YARN-4326. Fix TestDistributedShell timeout as AHS in MiniYarnCluster no longer 
    binds to default port 8188. (Meng Ding via wangda)

    YARN-4347. Resource manager fails with Null pointer exception. (Jian He via wangda)

    YARN-4374. RM capacity scheduler UI rounds user limit factor (Chang Li via
    jlowe)

    YARN-3849. Too much of preemption activity causing continuos killing of
    containers across queues. (Sunil G via wangda)

    YARN-3769. Consider user limit when calculating total pending resource for 
    preemption policy in Capacity Scheduler. (Eric Payne via wangda)

    YARN-4344. NMs reconnecting with changed capabilities can lead to wrong
    cluster resource calculations (Varun Vasudev via jlowe)

    YARN-4365. FileSystemNodeLabelStore should check for root dir existence on
    startup (Kuhu Shukla via jlowe)

    YARN-4380. TestResourceLocalizationService.testDownloadingResourcesOnContainerKill
    fails intermittently. (Varun Saxena via ozawa)

    YARN-4398. Remove unnecessary synchronization in RMStateStore. (Ning Ding via jianhe)

    YARN-3840. Resource Manager web ui issue when sorting application by id